--- a/personal-task-manager/package.json
+++ b/personal-task-manager/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.19.0",
     "@types/node": "22.5.0",
     "@types/react": "18.3.4",
     "@types/react-dom": "18.3.0",
@@ -17,6 +18,7 @@
     "eslint-config-next": "14.2.6",
     "next": "14.2.6",
     "postcss": "8.4.41",
+    "prisma": "^5.19.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.3.0",
