--- a/personal-task-manager/package.json
+++ b/personal-task-manager/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.6",
     "next": "14.2.6",
+    "next-auth": "^4.24.7",
     "postcss": "8.4.41",
     "prisma": "^5.19.0",
     "react": "18.3.1",
